crates/assembly/src/snapshots/miden_assembly__tests__multiple_constants_push.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 708
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.21, 1)
        push(21)
        asmOp(push.64, 1)
        push(64)
        asmOp(push.44, 1)
        push(44)
        asmOp(push.72, 1)
        push(72)
        noop
        noop
    end
end
