crates/assembly/src/snapshots/miden_assembly__tests__nested_blocks.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 4750
expression: program
---
begin
    join
        join
            join
                basic_block
                    push(2147483648)
                    push(4294967294)
                    mstore
                    drop
                    push(2)
                    noop
                end
                if.true
                    basic_block push(3) noop end
                else
                    basic_block push(5) noop end
                end
            end
            join
                if.true
                    if.true
                        basic_block push(7) noop end
                    else
                        basic_block push(11) noop end
                    end
                else
                    join
                        basic_block push(13) noop end
                        while.true
                            basic_block push(17) push(19) push(23) noop end
                        end
                    end
                end
                external.0xa48e53aed7b3e0f361a4eaa6f478bf823d3ceba16a7d18f36d1a4875499f14fc
            end
        end
        syscall.0x2f080a21a9b6f61a5230c564c7db4d830b32588988b27869bb23a6189cc9352d
    end
end
