crates/assembly/src/snapshots/miden_assembly__tests__program_with_dynamic_code_execution.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2111
expression: program
---
begin
    join
        basic_block push(2147483648) push(4294967294) mstore drop noop end
        asmOp(dynexec, 1) dyn
    end
end
