crates/assembly/src/snapshots/miden_assembly__tests__program_with_nested_procedure.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2207
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.2, 1)
        push(2)
        asmOp(push.4, 1)
        push(4)
        asmOp(add, 1)
        add
        asmOp(push.3, 1)
        push(3)
        noop
        asmOp(push.7, 1)
        push(7)
        asmOp(mul, 1)
        mul
        asmOp(push.11, 1)
        push(11)
        asmOp(push.5, 1)
        push(5)
        asmOp(push.3, 1)
        push(3)
        asmOp(push.7, 1)
        push(7)
        asmOp(mul, 1)
        mul
        asmOp(add, 1)
        add
        asmOp(sub, 2)
        neg
        asmOp(sub, 2)
        add
        noop
        noop
        noop
    end
end
