crates/assembly/src/snapshots/miden_assembly__tests__program_with_one_import_and_hex_call.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2411
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x5da0167178e1c1e197080f2364bc1524539557e9b3450b5e7ea33f48ae88b813
        end
        call.0x20234ee941e53a15886e733cc8e041198c6e90d2a16ea18ce1030e8c3596dd38
    end
end
