crates/assembly/src/snapshots/miden_assembly__tests__program_with_proc_locals.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2230
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.10, 1)
        push(10)
        asmOp(push.9, 1)
        push(9)
        asmOp(push.8, 1)
        push(8)
        push(4)
        noop
        noop
        push(4294967294)
        mload
        add
        push(4294967294)
        mstore
        drop
        asmOp(loc_store.0, 6)
        push(18446744069414584317)
        asmOp(loc_store.0, 6)
        push(4294967294)
        asmOp(loc_store.0, 6)
        mload
        asmOp(loc_store.0, 6)
        add
        asmOp(loc_store.0, 6)
        mstore
        asmOp(loc_store.0, 6)
        drop
        asmOp(add, 1)
        add
        asmOp(loc_load.0, 5)
        push(18446744069414584317)
        asmOp(loc_load.0, 5)
        push(4294967294)
        asmOp(loc_load.0, 5)
        mload
        asmOp(loc_load.0, 5)
        add
        asmOp(loc_load.0, 5)
        mload
        asmOp(mul, 1)
        mul
        push(18446744069414584317)
        push(4294967294)
        mload
        add
        push(4294967294)
        mstore
        drop
    end
end
